# arm-cmsis-core-m-xpack

./: .gitignore  .npmignore  CHANGELOG-XPACK.md  CHANGELOG.md  CMakeLists.txt  README-MAINTAINER-XPACK.md  README-MAINTAINER.md  README.md  meson.build  package.json  xpack.json
CMSIS/Core/: CMakeLists.txt
cmake/: xpack-3rd-party-arm-cmsis-core-m-config-version.cmake  xpack-3rd-party-arm-cmsis-core-m-config.cmake
